// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchStaticPath should return right data  1`] = `
Object {
  "fallback": "blocking",
  "paths": Array [
    Object {
      "locale": "de",
      "params": Object {
        "slug": Array [
          "testpagehome",
        ],
      },
    },
    Object {
      "locale": "en",
      "params": Object {
        "slug": Array [
          "testpagehomeen",
        ],
      },
    },
    Object {
      "locale": "da",
      "params": Object {
        "slug": Array [
          "testpagehomeda",
        ],
      },
    },
    Object {
      "locale": "de",
      "params": Object {
        "slug": Array [
          "testpage1",
        ],
      },
    },
    Object {
      "locale": "en",
      "params": Object {
        "slug": Array [
          "testpage1en",
        ],
      },
    },
    Object {
      "locale": "da",
      "params": Object {
        "slug": Array [
          "testpage1da",
        ],
      },
    },
    Object {
      "locale": "de",
      "params": Object {
        "slug": Array [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    Object {
      "locale": "en",
      "params": Object {
        "slug": Array [
          "testpagetype",
          "widthsubroute2en",
        ],
      },
    },
    Object {
      "locale": "da",
      "params": Object {
        "slug": Array [
          "testpagetype",
          "widthsubroute2da",
        ],
      },
    },
    Object {
      "locale": "de",
      "params": Object {
        "slug": Array [
          "capital-testpage3",
        ],
      },
    },
    Object {
      "locale": "en",
      "params": Object {
        "slug": Array [
          "capital-testpage3en",
        ],
      },
    },
    Object {
      "locale": "da",
      "params": Object {
        "slug": Array [
          "capital-testpage3da",
        ],
      },
    },
    Object {
      "locale": "de",
      "params": Object {
        "slug": Array [
          "notransslug",
        ],
      },
    },
    Object {
      "locale": "en",
      "params": Object {
        "slug": Array [
          "notransslug",
        ],
      },
    },
    Object {
      "locale": "da",
      "params": Object {
        "slug": Array [
          "notransslug",
        ],
      },
    },
  ],
}
`;

exports[`fetchStaticPath should return right data no locales  1`] = `
Object {
  "fallback": "blocking",
  "paths": Array [
    Object {
      "params": Object {
        "slug": Array [
          "testpagehome",
        ],
      },
    },
    Object {
      "params": Object {
        "slug": Array [
          "testpage1",
        ],
      },
    },
    Object {
      "params": Object {
        "slug": Array [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    Object {
      "params": Object {
        "slug": Array [
          "capital-testpage3",
        ],
      },
    },
    Object {
      "params": Object {
        "slug": Array [
          "notransslug",
        ],
      },
    },
  ],
}
`;
